--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-terminal "screen-256color"
+#set-option -g default-terminal "screen-256color"
 # set Ctrl-a as the default prefix key combination
 # and unbind C-b to free it up
 set -g prefix C-a
@@ -26,6 +26,13 @@ bind -r c select-pane -L
 bind -r t select-pane -D
 bind -r s select-pane -U
 bind -r r select-pane -R
+
+bind-key -t emacs-copy c cursor-left
+bind-key -t emacs-copy t cursor-up
+bind-key -t emacs-copy r cursor-right
+bind-key -t emacs-copy t cursor-down
+bind-key -t emacs-copy b previous-word
+#bind-key -t emacs-copy 'é' next-word marche pas...
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
@@ -57,11 +64,10 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
  
-run-shell "powerline-daemon -q"
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 # switch windows alt+number
 bind-key -n M-a select-window -t 0
 bind-key -n M-u select-window -t 1
 bind-key -n M-i select-window -t 2
 bind-key -n M-e select-window -t 3
+
 bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
