Update some config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 #set-option -g default-terminal "screen-256color"
 # set Ctrl-a as the default prefix key combination
 # and unbind C-b to free it up
-set -g prefix C-a
+set -g prefix C-Space
 unbind C-b
 
 # shorten command delay
@@ -21,18 +21,20 @@ bind C-t resize-pane -D 5
 bind C-s resize-pane -U 5
 bind C-r resize-pane -R 5
 
-# Navigate panes like Vim.
+# Vim flavoured bindings
 bind -r c select-pane -L
 bind -r t select-pane -D
 bind -r s select-pane -U
 bind -r r select-pane -R
-
-bind-key -t emacs-copy c cursor-left
-bind-key -t emacs-copy t cursor-up
-bind-key -t emacs-copy r cursor-right
-bind-key -t emacs-copy t cursor-down
-bind-key -t emacs-copy b previous-word
-#bind-key -t emacs-copy 'é' next-word marche pas...
+set-window-option -g mode-keys vi
+bind-key -t vi-copy c cursor-left
+bind-key -t vi-copy s cursor-up
+bind-key -t vi-copy r cursor-right
+bind-key -t vi-copy t cursor-down
+bind-key -t vi-copy b previous-word
+bind-key -t vi-copy 'v' begin-selection
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+bind-key -t vi-copy '\é' next-word
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
