--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,15 @@
-#set-option -g default-terminal "screen-256color"
-# set Ctrl-a as the default prefix key combination
-# and unbind C-b to free it up
+# Powerline configuration
+source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
+run-shell "powerline-daemon -q"
+
+# Set Ctrl-Space as the leader key
 set -g prefix C-Space
 unbind C-b
 
 # shorten command delay
 set -sg escape-time 2
 
-# ----------------------
-# Status Bar
-# -----------------------
+# Status bar
 set-option -g status on                # turn the status bar on
 set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
@@ -20,6 +20,8 @@ bind C-c resize-pane -L 5
 bind C-t resize-pane -D 5
 bind C-s resize-pane -U 5
 bind C-r resize-pane -R 5
+
+bind-key / display-panes \; select-pane -t :.
 
 # Vim flavoured bindings
 bind -r c select-pane -L
@@ -34,39 +36,23 @@ bind-key -t vi-copy t cursor-down
 bind-key -t vi-copy b previous-word
 bind-key -t vi-copy 'v' begin-selection
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
-bind-key -t vi-copy '\é' next-word
+#bind-key -t vi-copy '\é' next-word
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
- 
-# set color for status bar
-set-option -g status-bg colour235 #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr dim 
- 
-# set window list colors - red for active and cyan for inactive
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg colour236 
-set-window-option -g window-status-attr dim
- 
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg colour236 
-set-window-option -g window-status-current-attr bright
 
-# show session name, window & pane number, date and time on right side of
-# status bar
+# Show date and time in status bar
 set -g status-right-length 60
-set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: #(date | awk '{print $4}') ::"
+set -g status-right "#[fg=yellow] %d %b %Y #[fg=green] | #(date | awk '{print $4}') "
  
-#Evil mouse settings
-##scroll buffer
+# Mouse settings
 setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
  
-# switch windows alt+number
+# switch windows using Alt+ Middle keys
 bind-key -n M-a select-window -t 0
 bind-key -n M-u select-window -t 1
 bind-key -n M-i select-window -t 2
