--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,4 @@
-# Powerline configuration
-source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
-run-shell "powerline-daemon -q"
-
+set -g default-terminal 'screen-256color'
 # Set Ctrl-Space as the leader key
 set -g prefix C-Space
 unbind C-b
@@ -59,3 +56,5 @@ bind-key -n M-i select-window -t 2
 bind-key -n M-e select-window -t 3
 
 bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
+stty -ixon
+
