--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,6 @@ set -sg escape-time 2
 
 # Status bar
 set-option -g status on                # turn the status bar on
-set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 
@@ -43,12 +42,6 @@ set -g visual-activity on
 set -g status-right-length 60
 set -g status-right "#[fg=yellow] %d %b %Y #[fg=green] | #(date | awk '{print $4}') "
  
-# Mouse settings
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
- 
 # switch windows using Alt+ Middle keys
 bind-key -n M-a select-window -t 0
 bind-key -n M-u select-window -t 1
@@ -56,5 +49,5 @@ bind-key -n M-i select-window -t 2
 bind-key -n M-e select-window -t 3
 
 bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
-stty -ixon
 
+bind n new-window
