Update the tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 set -g default-terminal 'screen-256color'
 # Set Ctrl-Space as the leader key
-set -g prefix C-Space
+set -g prefix C-a
 unbind C-b
 
 # shorten command delay
@@ -32,15 +32,15 @@ bind-key -t vi-copy t cursor-down
 bind-key -t vi-copy b previous-word
 bind-key -t vi-copy 'v' begin-selection
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
-#bind-key -t vi-copy '\é' next-word
+bind-key -t vi-copy 'é' next-word
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
 
 # Show date and time in status bar
-set -g status-right-length 60
-set -g status-right "#[fg=yellow] %d %b %Y #[fg=green] | #(date | awk '{print $4}') "
+#set -g status-right-length 60
+#set -g status-right "#[fg=yellow] %d %b %Y #[fg=green] | #(date | awk '{print $4}') "
  
 # switch windows using Alt+ Middle keys
 bind-key -n M-a select-window -t 0
@@ -48,6 +48,17 @@ bind-key -n M-u select-window -t 1
 bind-key -n M-i select-window -t 2
 bind-key -n M-e select-window -t 3
 
+# Use the yank command to copy to the clipboard
 bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
 
 bind n new-window
+
+# Fix the clipboard
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+bind v splitw -v -p 20 # vertical split using 80 / 20
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
